# agri_management

./: README.md  pyproject.toml
.github/workflows/: ci.yml
agri_management/: hooks.py
agri_management/agriculture_management/doctype/crop_master/: crop_master.js  crop_master.json  crop_master.py  test_crop_master.py
agri_management/agriculture_management/doctype/farm_master/: farm_master.js  farm_master.json  farm_master.py  test_farm_master.py
agri_management/agriculture_management/doctype/fertilizer_event/: fertilizer_event.js  fertilizer_event.json  fertilizer_event.py  fertilizer_event_calendar.js  test_fertilizer_event.py
agri_management/agriculture_management/doctype/fertilizer_plan/: fertilizer_plan.json  fertilizer_plan.py
agri_management/agriculture_management/doctype/fertilizer_schedule/: fertilizer_schedule.js  fertilizer_schedule.json  fertilizer_schedule.py  test_fertilizer_schedule.py
agri_management/agriculture_management/doctype/plantation_master/: plantation_master.js  plantation_master.json  plantation_master.py  test_plantation_master.py
agri_management/agriculture_management/workspace/agriculture_management/: agriculture_management.json
